#

StarPU 1.5.0
==============================================

StarPU 1.4.1
==============================================

Changes:
  * Fix StarPUPY when not using asyncio: we can use concurrent.futures
    instead.
  * Add STARPU_CODELET_PROFILING environment variable to disable codelet task
    counting for applications to be able to have const codelets.

StarPU 1.4.0
==============================================

New features:
  * Add a starpu_mpi_task_submit-oriented way of submitting MPI tasks
    with functions starpu_mpi_task_exchange_data_before_execution() and
    starpu_mpi_task_exchange_data_after_execution()
  * Possibility to specify different directories to store performance
    model files with new variable STARPU_PERF_MODEL_PATH
  * Checkpoint mechanism for MPI applications
  * Transaction support
  * OpenMP LLVM support
  * Driver for HIP-based GPUs.
  * Fault tolerance support with starpu_task_ft_failed().
  * Julia programming interface.
  * Add get_max_size method to data interfaces for applications using data with
    variable size to express their maximal potential size.
  * New offline tool to draw graph showing elapsed time between sent
    or received data and their use by tasks
  * Add 4D tensor data interface.
  * New sched_tasks.rec trace file which monitors task scheduling push/pop actions
  * New STARPU_MPI_MEM_THROTTLE environment variable to throttle mpi
    submission according to memory use.
  * New number_events.data trace file which monitors number of events in trace
    files. This file can be parsed by the new script
    starpu_fxt_number_events_to_names.py to convert event keys to event names.
  * New STARPU_PER_WORKER perfmodel.
  * Add energy accounting in the simgrid mode: starpu_energy_use() and
    starpu_energy_used().
  * New function starpu_mpi_get_thread_cpuid() to know where is bound the MPI
    thread.
  * New function starpu_get_pu_os_index() to convert logical index of a PU to
    its OS index.